# nadzuna

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  config.h.in  configure.ac
lib/: CMakeLists.txt  bitmapimg.c  bitmapimg.h  bmpfile.c  bmpfile.h  color.c  color.h  color_inline.h  common.h  error.c  error.h  file_io.c  image.c  jpegfile.c  loadimage.c  nadzuna.h  pgmfile.c  pgmfile.h  pngfile.c  pngfile.h  tgafile.c  tgafile.h
lib/win/: nadzuna.rc.in
src/: CMakeLists.txt  Makefile  Makefile.am  bitmapimg.c  bitmapimg.h  bmpfile.c  bmpfile.h  bmptest.c  color.c  color.h  common.h  file_io.h  pgmfile.c  pgmfile.h  pngfile.c  pngfile.h  tgafile.c  tgafile.h  tgatest.c
